# doprompt-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
doprompt/: __init__.py  doprompt.py
dotprompt/: dotprompt.py
tests/: chat.prompt  dotprompt_test.py  simple.prompt  simple_jinja.prompt  simple_proxy.prompt
