[project]
name = "doprompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pybars3>=0.9.7",
    "pyyaml>=6.0.2",
]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "openai>=1.59.9",
    "pytest>=8.3.4",
]
